--- a/index.html
+++ b/index.html
@@ -9,6 +9,18 @@
     </head>
     <body>
         <h1>Discover hidden places in the world around you</h1>
-        <p><a href="#">Dowload Excursion (Coming soon!)</a></p>
+        <p><a href="#" class="link--cta">Download Excursion (Coming soon!)</a></p>
+        <video autoplay loop>
+            <source src="sources/videos/excursion.mp4">
+        </video>
+        <h2>Your personal travel guide</h2>
+        <h4>Excursion remembers places you like, and recommends new points of interest around you.</h4>
+        <p><img src="sources/images/camp.jpg" alt="camp"></p>
+        <p><img src="sources/images/phone.png" alt="phone"></p>
+        <h2>Coming Soon for iPhone and Android</h2>
+        <p><a href="#" class="link--cta">Download Excursion (Coming soon!)</a></p>
     </body>
+    <footer>
+        <p>@ Excursion</p>
+    </footer>
 </html>
